Fix visible image

--- a/src/sass/general.scss
+++ b/src/sass/general.scss
@@ -416,6 +416,11 @@ $topPadding: $topPadding* 1.3;
   display: none;
 }
 
+.desktop-col-spray {
+  display: none; 
+  color: red;
+}
+
 // 392 left header
 @media screen and (min-width: 1024px){
   .container--margin {
@@ -446,6 +451,7 @@ $topPadding: $topPadding* 1.3;
     background: none;
   }
   .desktop-col-spray {
+    display: block;
     width: 34%;
   }
   .desktop-col-text {
